	* Added code to delete associated data when deleting an affiliate
	entry in davit(1).
2025-07-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in the 'Edit Affiliate' dialog that caused
	the 'Hide Affiliate History' button to fail to be updated if the
	'Affiliate History' dialog was closed by clicking the 'X' button'.
2025-07-18 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the 'Edit System' and 'Compose Mail' dialogs in davit(1).
2025-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Refactored dvtstamp(8).
2025-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Changed 'Alert E-Mail Address' to 'Archive E-Mail Address' in
	the 'Edit System E-Mail Settings' dialog in davit(1).
2025-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression that broke generation of affiliate affidavit
	reminder emails.
2025-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'ID' column to the affiliate listing in the 'List
	Affiliates' dialog in davit(1).
2025-07-20 Fred Gleason <fredg@paravelsystems.com>
	* Added '--clear', '--create', '--delete', '--list', '--dry-run' and
	'--use-numeric-ids' switches to dvtstamp(8).
	* Added a dvtstamp(8) man page.
2025-07-24 Fred Gleason <fredg@paravelsystems.com>
	* Updated dvtdbcheck(8) to use 'DvtSqlQuery'.
2025-07-24 Fred Gleason <fredg@paravelsystems.com>
	* Removed dvt_import(1).
	* Removed the 'davit-importers' RPM package.
2025-07-24 Fred Gleason <fredg@paravelsystems.com>
	* Removed the vmime dependency.
2025-07-25 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up build warnings.
2025-07-29 Fred Gleason <fredg@paravelsystems.com>
	* Hid the 'Generate Affidavit' button in the 'List Programs' dialog.
2025-07-30 Fred Gleason <fredg@paravelsystems.com>
	* Moved the 'Spread' class heirarchy out of the convenience library
	into 'davit/'.
2025-07-30 Fred Gleason <fredg@paravelsystems.com>
	* Moved the 'StateComboBox' widget out of the convenience library
	into 'davit/'.